logs/offboard_pkg/build.make.085.log.stderr
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:2:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:70:61: error: expected ‘;’ at end of member declaration
   70 |     void get_att(double &yaw_d, geometry_msgs::Quaternion &q)
      |                                                             ^
      |                                                              ;
make[2]: *** [CMakeFiles/main.dir/build.make:63: CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:70:61: error: expected ‘;’ at end of member declaration
   70 |     void get_att(double &yaw_d, geometry_msgs::Quaternion &q)
      |                                                             ^
      |                                                              ;
make[2]: *** [CMakeFiles/main.dir/build.make:76: CMakeFiles/main.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:723: CMakeFiles/main.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
